--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   
   <title>My Portfolio</title>
   <link rel="stylesheet" href="styles.css">
+  
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
 
@@ -22,9 +26,11 @@
             <a href="#" class="active">Experience</a>
             <a href="#" class="active">Contact</a>
         </nav>
+    </header>
 
-        <section>
-            <div>
+
+        <section class="Home">
+            <div class="home-img">
                 <img src="images/manga character_pinterest_1.jpeg" alt="">
             </div>
 
@@ -36,11 +42,20 @@
             </div>
 
             <div class="Social icons">
-                <a href="#"><i class=""></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             </div>
 
+            <button class="btn">
+                <a href="#">Hire Me</a>
+            </button>
+
+
         </section>
-    </header>
   
 </body>
 
