--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>My Portfolio</title>
+  <title>Portfolio 1</title>
   <link rel="stylesheet" href="styles.css">
   
-  <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet"> -->
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
@@ -20,16 +21,16 @@
 
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="#" class="active">Explore</a>
-            <a href="#" class="active">Projects</a>
-            <a href="#" class="active">Education</a>
-            <a href="#" class="active">Experience</a>
-            <a href="#" class="active">Contact</a>
+            <a href="#" class="">Explore</a>
+            <a href="#" class="">Projects</a>
+            <a href="#" class="">Education</a>
+            <a href="#" class="">Experience</a>
+            <a href="#" class="">Contact</a>
         </nav>
     </header>
 
 
-        <section class="Home">
+        <section class="home">
             <div class="home-img">
                 <img src="images/manga character_pinterest_1.jpeg" alt="">
             </div>
@@ -38,21 +39,23 @@
                 <h1>Hi, It's <span>Myname</span></h1>
                 <h3 class="typing-text">I'm a <span></span></h3>
 
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
+                
+                <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> -->
+            
 
-            <div class="Social icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            </div>
+                <div class="social-icon">
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <!-- <a href="#"><i class="fa-brands fa-github"></i></a> -->
+                </div>
 
-            <button class="btn">
-                <a href="#">Hire Me</a>
-            </button>
+                <a href="#" class="btn">Hire Me</a>
+                <!-- <button>
+                </button> -->
+            </div>
 
 
         </section>
